index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <body>
 
   <header>
-    <img src="logo.png" alt="JL_Gamerz Logo">
+    <img src="IMG_1971.jpeg" alt="JL_Gamerz Logo">
     <h1>𝕁𝕃_𝔾𝕒𝕞𝕖𝕣𝕫</h1>
   </header>
 
