index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>𝕁𝕃_𝔾𝕒𝕞𝕖𝕣𝕫 – Infos & Giveaways</title>
+  <title>𝕁𝕃_𝔾𝕒𝕞𝕖𝕣𝕫</title>
   <style>
     body {
       margin: 0;
@@ -132,7 +132,8 @@
 
   <header>
     <img src="IMG_1971.jpeg" alt="JL_Gamerz Logo">
-    <h1>𝕁𝕃_𝔾𝕒𝕞𝕖𝕣𝕫</h1>
+    <h1>Herzlich willkommen bei <br>
+      𝕁𝕃_𝔾𝕒𝕞𝕖𝕣𝕫</h1>
   </header>
 
   <section class="intro">
@@ -155,14 +156,14 @@
 
   <div class="whatsapp">
     <a href="https://whatsapp.com/channel/0029Vb6bRl3GufIwKA71bL3l" target="_blank">
-      📲 Folge uns auf WhatsApp
+        Folge uns auf WhatsApp
     </a>
   </div>
 
   <footer>
-    © 2025 𝕁𝕃_𝔾𝕒𝕞𝕖𝕣𝕫 – All rights reserved
+    &copy 2025 𝕁𝕃_𝔾𝕒𝕞𝕖𝕣𝕫 – All rights reserved
     <div class="creator">
-      Made with 💻 by Alex Gaming Studios
+      Made by Alex Gaming Studios
     </div>
   </footer>
 
