index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   <footer>
     &copy 2025 𝕁𝕃_𝔾𝕒𝕞𝕖𝕣𝕫 – All rights reserved
     <div class="creator">
-      Made by Alex Gaming Studios
+      <a href="https://github.com/alexgamingstudio">Made by Alex Gaming Studios</a>
     </div>
   </footer>
 
