--- a/index.html
+++ b/index.html
@@ -132,8 +132,7 @@
 
   <header>
     <img src="IMG_1971.jpeg" alt="JL_Gamerz Logo">
-    <h1>Herzlich willkommen bei <br>
-      𝕁𝕃_𝔾𝕒𝕞𝕖𝕣𝕫</h1>
+    <h1>𝕁𝕃_𝔾𝕒𝕞𝕖𝕣𝕫</h1>
   </header>
 
   <section class="intro">
