--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: linear-gradient(to right, #1c1c1c, #2d2d2d);
       color: #f0f0f0;
+      animation: fadeInBody 1.2s ease-in;
+    }
+
+    @keyframes fadeInBody {
+      from { opacity: 0; }
+      to { opacity: 1; }
     }
 
     header {
@@ -17,6 +23,12 @@
       padding: 20px;
       text-align: center;
       border-bottom: 3px solid #00ffcc;
+      animation: fadeInHeader 1.5s ease-in;
+    }
+
+    @keyframes fadeInHeader {
+      0% { opacity: 0; transform: translateY(-20px); }
+      100% { opacity: 1; transform: translateY(0); }
     }
 
     header img {
@@ -37,6 +49,12 @@
     .intro {
       padding: 30px 20px;
       text-align: center;
+      animation: fadeInIntro 1.5s ease-in;
+    }
+
+    @keyframes fadeInIntro {
+      from { opacity: 0; transform: scale(0.98); }
+      to { opacity: 1; transform: scale(1); }
     }
 
     .intro h2 {
@@ -51,6 +69,12 @@
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0, 255, 204, 0.2);
+      animation: fadeInGoals 2s ease-in;
+    }
+
+    @keyframes fadeInGoals {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     .goals h3 {
@@ -80,6 +104,12 @@
     .whatsapp {
       margin-top: 30px;
       text-align: center;
+      animation: fadeInWhatsApp 2.3s ease-in;
+    }
+
+    @keyframes fadeInWhatsApp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     .whatsapp a {
@@ -105,6 +135,12 @@
       border-top: 3px solid #00ffcc;
       color: #aaa;
       font-size: 0.9rem;
+      animation: fadeInFooter 2.5s ease-in;
+    }
+
+    @keyframes fadeInFooter {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     footer .creator {
@@ -112,6 +148,15 @@
       color: #00ffcc;
       font-weight: bold;
       font-size: 0.85rem;
+    }
+
+    footer .creator a {
+      color: #00ffcc;
+      text-decoration: none;
+    }
+
+    footer .creator a:hover {
+      text-decoration: underline;
     }
 
     @media (max-width: 600px) {
@@ -155,12 +200,12 @@
 
   <div class="whatsapp">
     <a href="https://whatsapp.com/channel/0029Vb6bRl3GufIwKA71bL3l" target="_blank">
-        Folge uns auf WhatsApp
+      Folge uns auf WhatsApp
     </a>
   </div>
 
   <footer>
-    &copy 2025 𝕁𝕃_𝔾𝕒𝕞𝕖𝕣𝕫 – All rights reserved
+    &copy; 2025 𝕁𝕃_𝔾𝕒𝕞𝕖𝕣𝕫 – All rights reserved
     <div class="creator">
       <a href="https://github.com/alexgamingstudio">Made by Alex Gaming Studios</a>
     </div>
