index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
   </header>
 
   <section class="intro">
-    <h2>Willkommen auf unserer offiziellen Info-Seite!</h2>
+    <h2>Willkommen auf unserer Info-Seite!</h2>
     <p>Wir sind <strong>Jan (J)</strong> & <strong>Luke (L)</strong> – gemeinsam sind wir <strong>𝕁𝕃_𝔾𝕒𝕞𝕖𝕣𝕫</strong>!</p>
     <p>Teilt unseren Kanal gerne mit euren Freunden und unterstützt uns auf unserem Weg!</p>
   </section>
