index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
   <header>
     <img src="IMG_1971.jpeg" alt="JL_Gamerz Logo">
-    <h1>𝕁𝕃_𝔾𝕒𝕞𝕖𝕣𝕫</h1>
+    <h1><blink>𝕁𝕃_𝔾𝕒𝕞𝕖𝕣𝕫</blink></h1>
   </header>
 
   <section class="intro">
